Fix 517 - Updated CSS to correctly display items without cutting off last item. (#520)

--- a/scss/components/_charactersheet.scss
+++ b/scss/components/_charactersheet.scss
@@ -238,6 +238,12 @@ $swffg-table-header-color: rgb(145, 145, 145);
           
         }
 
+        .tab {
+          &.items, &.general, &.obligation {
+            height: calc(100% - 2.5rem);
+          }
+        }
+
         .biography {
           height: calc(100% - 4.6875rem);
           overflow:auto;
